--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^10.0.0",
         "express": "^4.16.2",
         "http-errors": "^1.7.1",
+        "mongoose": "^6.1.1",
         "morgan": "^1.9.1",
         "pug": "^3.0.1"
     },
